Fix date selector misalignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -227,14 +227,14 @@ main {
 .expense-form-options {
   width: 50%;
   height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .expense-form-options input,
 select {
   margin-top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* Date picker */
